Bugs have been fixed The problem where grid sizes above 20 would not fit perfectly into the container has been resolved The problem where sketching would not be possible after changing the grid size has been resolved

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-right: 1px;
+    margin-bottom: 1px;
 }
 
 #grid-btn {
